# ghowl

./: .gitignore  CMakeLists.txt  README  TODO  ghowl.sln  ghowl.vcproj  ghowl.vcxproj  ghowl_vs2010.sln  ghowl_vs2013.sln
doc/: ghowl.doc
src/: cudaemu.h  ghowl.cpp  ghowl.h
test/: bmpcolor.cpp  bmpcolor.cu  bmprotate.cpp  bmprotate.cu  bmpsobel.cpp  bmpsobel.cu  gaussian.cpp  gaussian.cu  ghowl_test.vcproj  ghowl_test.vcxproj  heat.cpp  heat.cu  main.cpp  makecu.bat  sum.cpp  sum.cu
